feat: update documentation for update opening
