# handler/updateOpeningHandler.go
@@ -16,6 +16,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param id query string true "Opening identification"
+// @Param opening body UpdateOpeningRequest true "Request body"
 // @Success 200 {object} UpdateOpeningResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
